--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "REACT_NATIVE_PACKAGER_HOSTNAME=10.0.2.2 expo start -c --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
@@ -15,6 +15,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/babel-plugin": "^1.94.3",
+    "@tamagui/font-inter": "^1.94.3",
+    "@tamagui/themes": "^1.94.3",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -26,9 +29,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tamagui": "^1.94.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
