--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "REACT_NATIVE_PACKAGER_HOSTNAME=10.0.2.2 expo start -c --android",
+    "android": "REACT_NATIVE_PACKAGER_HOSTNAME=10.0.2.2 expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
@@ -26,6 +26,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
