--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
-    "@shopify/flash-list": "1.6.3"
+    "@shopify/flash-list": "1.6.3",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
