--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.3",
     "@tamagui/babel-plugin": "^1.94.3",
     "@tamagui/font-inter": "^1.94.3",
     "@tamagui/themes": "^1.94.3",
@@ -29,14 +32,14 @@
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
-    "@shopify/flash-list": "1.6.3",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
