--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@tamagui/babel-plugin": "^1.94.3",
     "@tamagui/font-inter": "^1.94.3",
     "@tamagui/themes": "^1.94.3",
-    "expo": "~50.0.14",
+    "expo": "^50.0.17",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
+    "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
     "lottie-react-native": "^6.5.1",
