--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
