--- a/package.json
+++ b/package.json
@@ -31,18 +31,19 @@
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
     "lottie-react-native": "^6.5.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.22.4",
-    "zustand": "^4.5.2",
-    "react-native-gesture-handler": "~2.14.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
