--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.3",
     "@tamagui/babel-plugin": "^1.94.3",
@@ -41,6 +42,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.23.6",
