--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.23.6",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
