--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.23.6",
-    "zustand": "^4.5.2",
-    "react-native-svg": "14.1.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
