--- a/.tamagui/tamagui.config.json
+++ b/.tamagui/tamagui.config.json
@@ -48110,25 +48110,25 @@
           "val": "#111111",
           "variable": ""
         },
-        "black2": {
-          "isVar": true,
-          "key": "$black2",
-          "name": "color-3",
-          "val": "#1C1C1C",
-          "variable": ""
-        },
         "gray1": {
           "isVar": true,
           "key": "$gray1",
-          "name": "color-4",
+          "name": "color-3",
           "val": "#8C8C8C",
           "variable": ""
         },
         "gray2": {
           "isVar": true,
           "key": "$gray2",
-          "name": "color-5",
+          "name": "color-4",
           "val": "#262626",
+          "variable": ""
+        },
+        "gray3": {
+          "isVar": true,
+          "key": "$gray3",
+          "name": "color-5",
+          "val": "#1C1C1C",
           "variable": ""
         },
         "red1": {
@@ -49011,25 +49011,25 @@
         "val": "#111111",
         "variable": ""
       },
-      "$color.black2": {
-        "isVar": true,
-        "key": "$black2",
-        "name": "color-3",
-        "val": "#1C1C1C",
-        "variable": ""
-      },
       "$color.gray1": {
         "isVar": true,
         "key": "$gray1",
-        "name": "color-4",
+        "name": "color-3",
         "val": "#8C8C8C",
         "variable": ""
       },
       "$color.gray2": {
         "isVar": true,
         "key": "$gray2",
-        "name": "color-5",
+        "name": "color-4",
         "val": "#262626",
+        "variable": ""
+      },
+      "$color.gray3": {
+        "isVar": true,
+        "key": "$gray3",
+        "name": "color-5",
+        "val": "#1C1C1C",
         "variable": ""
       },
       "$color.red1": {
