--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
-    "react-native-bouncy-checkbox": "^4.0.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -47,7 +46,9 @@
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.23.6",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-linear-gradient": "~12.7.2",
+    "@gorhom/bottom-sheet": "^4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
