--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "zod": "^3.23.6",
     "zustand": "^4.5.2",
     "expo-linear-gradient": "~12.7.2",
-    "@gorhom/bottom-sheet": "^4"
+    "@gorhom/bottom-sheet": "^4",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
