--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gorhom/bottom-sheet": "^4",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
@@ -22,8 +23,11 @@
     "@tamagui/babel-plugin": "^1.94.3",
     "@tamagui/font-inter": "^1.94.3",
     "@tamagui/themes": "^1.94.3",
+    "date-fns": "^3.6.0",
     "expo": "^50.0.17",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
@@ -32,7 +36,6 @@
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
     "lottie-react-native": "^6.5.1",
-    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
@@ -46,10 +49,7 @@
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
     "zod": "^3.23.6",
-    "zustand": "^4.5.2",
-    "expo-linear-gradient": "~12.7.2",
-    "@gorhom/bottom-sheet": "^4",
-    "expo-image-picker": "~14.7.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
