--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@gorhom/bottom-sheet": "^4",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.3",
+    "@tamagui/animations-moti": "^1.99.1",
     "@tamagui/babel-plugin": "^1.94.3",
     "@tamagui/font-inter": "^1.94.3",
     "@tamagui/themes": "^1.94.3",
     "date-fns": "^3.6.0",
-    "expo": "^50.0.17",
+    "expo": "~50.0.19",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
@@ -35,7 +36,7 @@
     "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
-    "lottie-react-native": "^6.5.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
