--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.7.0",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.3",
     "@tamagui/animations-moti": "^1.99.1",
