--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@date-fns/utc": "^1.2.0",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@hookform/resolvers": "^3.3.4",
@@ -26,6 +27,7 @@
     "@tamagui/font-inter": "^1.94.3",
     "@tamagui/themes": "^1.94.3",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "expo": "~50.0.19",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
