consolidate changes before creating new branch

--- a/.tamagui/tamagui.config.json
+++ b/.tamagui/tamagui.config.json
@@ -52603,46 +52603,88 @@
           "val": "#2A8844",
           "variable": ""
         },
+        "customGreen2": {
+          "isVar": true,
+          "key": "$customGreen2",
+          "name": "color-205",
+          "val": "#43B368",
+          "variable": ""
+        },
+        "customGreen3": {
+          "isVar": true,
+          "key": "$customGreen3",
+          "name": "color-206",
+          "val": "#223D2A",
+          "variable": ""
+        },
         "customRed1": {
           "isVar": true,
           "key": "$customRed1",
-          "name": "color-205",
+          "name": "color-207",
           "val": "#C73A57",
           "variable": ""
         },
         "customRed2": {
           "isVar": true,
           "key": "$customRed2",
-          "name": "color-206",
+          "name": "color-208",
           "val": "#C33756",
           "variable": ""
         },
         "customRed3": {
           "isVar": true,
           "key": "$customRed3",
-          "name": "color-207",
+          "name": "color-209",
           "val": "#962C42",
           "variable": ""
         },
         "customRed4": {
           "isVar": true,
           "key": "$customRed4",
-          "name": "color-208",
+          "name": "color-210",
           "val": "#652533",
           "variable": ""
         },
         "customRed5": {
           "isVar": true,
           "key": "$customRed5",
-          "name": "color-209",
+          "name": "color-211",
           "val": "#31181E",
           "variable": ""
         },
         "customRed6": {
           "isVar": true,
           "key": "$customRed6",
-          "name": "color-210",
+          "name": "color-212",
           "val": "rgba(150, 44, 66, 0.25)",
+          "variable": ""
+        },
+        "customRed7": {
+          "isVar": true,
+          "key": "$customRed7",
+          "name": "color-213",
+          "val": "#F04B5F",
+          "variable": ""
+        },
+        "customRed8": {
+          "isVar": true,
+          "key": "$customRed8",
+          "name": "color-214",
+          "val": "#4F2529",
+          "variable": ""
+        },
+        "customYellow1": {
+          "isVar": true,
+          "key": "$customYellow1",
+          "name": "color-215",
+          "val": "#FAB632",
+          "variable": ""
+        },
+        "customYellow2": {
+          "isVar": true,
+          "key": "$customYellow2",
+          "name": "color-216",
+          "val": "#4F3F1E",
           "variable": ""
         }
       },
@@ -54918,46 +54960,88 @@
         "val": "#2A8844",
         "variable": ""
       },
+      "$color.customGreen2": {
+        "isVar": true,
+        "key": "$customGreen2",
+        "name": "color-205",
+        "val": "#43B368",
+        "variable": ""
+      },
+      "$color.customGreen3": {
+        "isVar": true,
+        "key": "$customGreen3",
+        "name": "color-206",
+        "val": "#223D2A",
+        "variable": ""
+      },
       "$color.customRed1": {
         "isVar": true,
         "key": "$customRed1",
-        "name": "color-205",
+        "name": "color-207",
         "val": "#C73A57",
         "variable": ""
       },
       "$color.customRed2": {
         "isVar": true,
         "key": "$customRed2",
-        "name": "color-206",
+        "name": "color-208",
         "val": "#C33756",
         "variable": ""
       },
       "$color.customRed3": {
         "isVar": true,
         "key": "$customRed3",
-        "name": "color-207",
+        "name": "color-209",
         "val": "#962C42",
         "variable": ""
       },
       "$color.customRed4": {
         "isVar": true,
         "key": "$customRed4",
-        "name": "color-208",
+        "name": "color-210",
         "val": "#652533",
         "variable": ""
       },
       "$color.customRed5": {
         "isVar": true,
         "key": "$customRed5",
-        "name": "color-209",
+        "name": "color-211",
         "val": "#31181E",
         "variable": ""
       },
       "$color.customRed6": {
         "isVar": true,
         "key": "$customRed6",
-        "name": "color-210",
+        "name": "color-212",
         "val": "rgba(150, 44, 66, 0.25)",
+        "variable": ""
+      },
+      "$color.customRed7": {
+        "isVar": true,
+        "key": "$customRed7",
+        "name": "color-213",
+        "val": "#F04B5F",
+        "variable": ""
+      },
+      "$color.customRed8": {
+        "isVar": true,
+        "key": "$customRed8",
+        "name": "color-214",
+        "val": "#4F2529",
+        "variable": ""
+      },
+      "$color.customYellow1": {
+        "isVar": true,
+        "key": "$customYellow1",
+        "name": "color-215",
+        "val": "#FAB632",
+        "variable": ""
+      },
+      "$color.customYellow2": {
+        "isVar": true,
+        "key": "$customYellow2",
+        "name": "color-216",
+        "val": "#4F3F1E",
         "variable": ""
       },
       "$radius.0": {
