--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -59,6 +60,7 @@
     "@babel/core": "^7.20.0",
     "@tamagui/types": "^1.101.7",
     "@types/react": "~18.2.45",
+    "@types/react-native-calendars": "^1.1264.7",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
