--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.3",
+    "@shopify/react-native-skia": "^1.3.10",
     "@tamagui/animations-moti": "^1.99.1",
     "@tamagui/babel-plugin": "^1.94.3",
     "@tamagui/font-inter": "^1.94.3",
@@ -54,6 +55,7 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.6",
     "tamagui": "^1.94.3",
+    "victory-native": "^41.1.0",
     "zod": "^3.23.6",
     "zustand": "^4.5.2"
   },
